OL Spacing Fixed

--- a/_sass/_articles.scss
+++ b/_sass/_articles.scss
@@ -138,7 +138,7 @@ ul{
 
 ol{
     padding-left: 20px;
-    margin-bottom: 1rem;
+    margin-bottom: 1rem !important;
 }
 
 hr {
